test/e2e/chainsaw/hybridgateway/gatewayconfiguration-konnectapiauthconfiguration-cross-namespace/00-namespaces.yaml
---
# Namespace for KonnectAPIAuthConfiguration
apiVersion: v1
kind: Namespace
metadata:
  name: ($konnect_api_auth_namespace)
---
# Namespace for GatewayConfiguration, Gateway and HTTPRoute
apiVersion: v1
kind: Namespace
metadata:
  name: ($gateway_namespace)
