test/e2e/chainsaw/hybridgateway/gatewayconfiguration-konnectapiauthconfiguration-cross-namespace/01-httproute-echo.yaml
---
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: (join('-', [($test_name), 'echo-route']))
  namespace: ($namespace)
  labels:
    chainsaw/test: ($test_name)
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: (join('-', [($test_name), 'gateway']))
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: ($route_path)
      backendRefs:
        - name: (join('-', [($test_name), 'echo']))
          port: 1027
