test/e2e/chainsaw/hybridgateway/gatewayconfiguration-konnectapiauthconfiguration-cross-namespace/02-assert-konnectgwcp-auth-not-resolved.yaml
---
# Assert KonnectGatewayControlPlane has APIAuthResolvedRef=False due to
# missing KongReferenceGrant for cross-namespace KonnectAPIAuthConfiguration.
#
# Required bindings:
#   - gateway_namespace: Namespace of the KonnectGatewayControlPlane.
apiVersion: konnect.konghq.com/v1alpha2
kind: KonnectGatewayControlPlane
metadata:
  namespace: ($gateway_namespace)
status:
  (conditions[?type == 'APIAuthResolvedRef']):
    - status: 'False'
      reason: RefNotPermitted
