test/e2e/chainsaw/hybridgateway/gatewayconfiguration-konnectapiauthconfiguration-cross-namespace/02-httproute-echo-assert.yaml
---
# Assert HTTPRoute is accepted and programmed
#
# Required bindings:
#   - test_name: The test name label to match (e.g., "gateway-tls-certificates")
#   - namespace: The nanespace where the HTTPRoute is in
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  (labels."chainsaw/test" == ($test_name)): true
  namespace: ($namespace)
status:
  parents:
    - parentRef:
        name: (join('-', [($test_name), 'gateway']))
        group: gateway.networking.k8s.io
        kind: Gateway
      controllerName: konghq.com/gateway-operator
      # Filter conditions array to check for all required conditions
      (conditions[?type == 'Accepted']):
        - status: "True"
          reason: Accepted
      (conditions[?type == 'ResolvedRefs']):
        - status: "True"
          reason: ResolvedRefs
      (conditions[?type == 'KongRouteProgrammed']):
        - status: "True"
          reason: KongRouteProgrammed
      (conditions[?type == 'KongServiceProgrammed']):
        - status: "True"
          reason: KongServiceProgrammed
      (conditions[?type == 'KongUpstreamProgrammed']):
        - status: "True"
          reason: KongUpstreamProgrammed
      (conditions[?type == 'KongTargetProgrammed']):
        - status: "True"
          reason: KongTargetProgrammed
